Use log4j2’s composite configuration which supported by Sprng Boot 2.6

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -138,11 +138,9 @@ logging:
 ---
 spring:
   config.activate.on-profile: prod
-logging:
-  config: classpath:log4j2-with-kafka.xml
 
-spring.session:
-  store-type: redis
+logging.log4j2.config.override: classpath:log4j2-with-kafka.xml
+
 management.metrics.export.influx.enabled: true
 opentracing.jaeger:
   enabled: true
