--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 group=io.cornerstone
 version=1.0.0-SNAPSHOT
+log4j2.version=2.15+
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
 #repoUrlPrefix=http://localhost:8081/repository
 repoUser=admin
