Next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=1.0.0
+version=1.0.1-SNAPSHOT
 log4j2.version=latest.release
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
 #repoUrlPrefix=http://localhost:8081/repository
