--- a/cornerstone-core/build.gradle
+++ b/cornerstone-core/build.gradle
@@ -14,6 +14,11 @@ dependencies {
 	api "org.springframework.boot:spring-boot-starter-actuator"
 	api "org.springframework.kafka:spring-kafka"
 	api "org.springframework.session:spring-session-data-redis"
+	api "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+	api "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor"
+	api "com.fasterxml.jackson.dataformat:jackson-dataformat-smile"
+	api "com.fasterxml.jackson.module:jackson-module-mrbean"
+	api "com.fasterxml.jackson.module:jackson-module-parameter-names"
 	api "io.github.resilience4j:resilience4j-spring-boot2:${project.properties['resilience4j.version']?:'latest.release'}"
 	api "io.opentracing.contrib:opentracing-spring-jaeger-web-starter:${project.properties['java-spring-jaeger.version']?:'latest.release'}"
 	api "io.opentracing.contrib:opentracing-jdbc:${project.properties['opentracing-jdbc.version']?:'latest.release'}"
