Next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=1.0.2
+version=1.0.3-SNAPSHOT
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
 #repoUrlPrefix=http://localhost:8081/repository
 repoUser=admin
