--- a/cornerstone-fs/build.gradle
+++ b/cornerstone-fs/build.gradle
@@ -4,6 +4,6 @@ plugins {
 
 dependencies {
 	api project(":cornerstone-core")
-	api "commons-net:commons-net:${project.properties['commons-net.version']?:'latest.release'}"
-	api "com.amazonaws:aws-java-sdk-s3:${project.properties['aws-sdk-java.version']?:'latest.release'}"
+	api "commons-net:commons-net:${property('commons-net.version')}"
+	api "com.amazonaws:aws-java-sdk-s3:${property('aws-sdk-java.version')}"
 }
