--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,17 @@
 group=io.cornerstone
 version=1.0.3-SNAPSHOT
+lombok-plugin.version=6.4.1
+javaformat-plugin.version=0.0.31
+dependency-management-plugin.version=1.0.11.RELEASE
+spring-boot.version=2.6.4
+resilience4j.version=1.7.1
+java-spring-jaeger.version=3.3.1
+opentracing-jdbc.version=0.2.15
+opentracing-spring-data-redis.version=0.1.16
+springdoc.version=1.6.6
+testcontainers.version=1.16.3
+commons-net.version=3.8.0
+aws-sdk-java.version=1.12.170
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
 #repoUrlPrefix=http://localhost:8081/repository
 repoUser=admin
