--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 group=io.cornerstone
-version=1.0.4-SNAPSHOT
+version=1.0.4
 lombok-plugin.version=6.4.1
 javaformat-plugin.version=0.0.31
 dependency-management-plugin.version=1.0.11.RELEASE
-spring-boot.version=2.6.4
+spring-boot.version=2.6.6
 resilience4j.version=1.7.1
 java-spring-jaeger.version=3.3.1
 opentracing-jdbc.version=0.2.15
