--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=1.0.4
+version=1.0.5-SNAPSHOT
 lombok-plugin.version=6.4.1
 javaformat-plugin.version=0.0.31
 dependency-management-plugin.version=1.0.11.RELEASE
