Upgrade Spring Boot

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ version=1.0.6-SNAPSHOT
 lombok-plugin.version=6.4.1
 javaformat-plugin.version=0.0.33
 dependency-management-plugin.version=1.0.11.RELEASE
-spring-boot.version=2.7.0
+spring-boot.version=2.7.1
 resilience4j.version=1.7.1
 java-spring-jaeger.version=3.3.1
 opentracing-jdbc.version=0.2.15
@@ -12,7 +12,6 @@ springdoc.version=1.6.8
 testcontainers.version=1.17.1
 commons-net.version=3.8.0
 aws-sdk-java.version=1.12.170
-# gradle publish -PrepoUser=xxx -PrepoPassword=xxx
-#repoUrlPrefix=http://localhost:8081/repository
+# gradle publish -PrepoUrlPrefix=http://localhost:8081/repository -PrepoUser=xxx -PrepoPassword=xxx
 repoUser=admin
 repoPassword=password
