--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 group=io.cornerstone
 version=1.0.6-SNAPSHOT
 lombok-plugin.version=6.4.1
-javaformat-plugin.version=0.0.33
-dependency-management-plugin.version=1.0.11.RELEASE
-spring-boot.version=2.7.1
+javaformat-plugin.version=0.0.35
+dependency-management-plugin.version=1.1.0
+spring-boot.version=2.7.6
 resilience4j.version=1.7.1
 java-spring-jaeger.version=3.3.1
 opentracing-jdbc.version=0.2.15
 opentracing-spring-data-redis.version=0.1.16
-springdoc.version=1.6.9
-testcontainers.version=1.17.2
+springdoc.version=1.6.13
+testcontainers.version=1.17.6
 commons-net.version=3.8.0
 aws-sdk-java.version=1.12.170
 # gradle publish -PrepoUrlPrefix=http://localhost:8081/repository -PrepoUser=xxx -PrepoPassword=xxx
