--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=1.0.6
+version=2.0.0-SNAPSHOT
 lombok-plugin.version=6.4.1
 javaformat-plugin.version=0.0.35
 dependency-management-plugin.version=1.1.0
