Import testcontainers BOM

--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencyManagement {
 	imports {
 		mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+		mavenBom "org.testcontainers:testcontainers-bom:${property('testcontainers.version')}"
 	}
 	generatedPomCustomization {
 		enabled = false
