--- a/cornerstone-core/build.gradle
+++ b/cornerstone-core/build.gradle
@@ -27,17 +27,14 @@ dependencies {
 	compileOnly "org.springframework.boot:spring-boot-starter-amqp"
 	testFixturesApi "org.springframework.boot:spring-boot-starter-test"
 	testFixturesApi "org.springframework.security:spring-security-test"
-	ext {
-		testcontainersVersion = property('testcontainers.version')
-	}
-	testFixturesApi "org.testcontainers:testcontainers:${testcontainersVersion}"
-	testFixturesApi "org.testcontainers:junit-jupiter:${testcontainersVersion}"
-	testFixturesImplementation "org.testcontainers:mysql:${testcontainersVersion}"
-	testFixturesImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
-	testFixturesImplementation "org.testcontainers:mssqlserver:${testcontainersVersion}"
-	testFixturesImplementation "org.testcontainers:oracle-xe:${testcontainersVersion}"
-	testFixturesImplementation "org.testcontainers:db2:${testcontainersVersion}"
-	testFixturesImplementation "org.testcontainers:rabbitmq:${testcontainersVersion}"
+	testFixturesApi "org.testcontainers:testcontainers"
+	testFixturesApi "org.testcontainers:junit-jupiter"
+	testFixturesImplementation "org.testcontainers:mysql"
+	testFixturesImplementation "org.testcontainers:postgresql"
+	testFixturesImplementation "org.testcontainers:mssqlserver"
+	testFixturesImplementation "org.testcontainers:oracle-xe"
+	testFixturesImplementation "org.testcontainers:db2"
+	testFixturesImplementation "org.testcontainers:rabbitmq"
 	integrationTestImplementation "org.springframework.boot:spring-boot-starter-amqp"
 	integrationTestRuntimeOnly "com.mysql:mysql-connector-j"
 	integrationTestRuntimeOnly "org.postgresql:postgresql"
