--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -34,6 +34,10 @@ spring.jpa:
     xml_mapping_enabled: false
     cdi.extensions: true
 
+spring.mvc:
+  problemdetails.enabled: false
+  throw-exception-if-no-handler-found: true
+
 spring.data.web:
   pageable:
     default-page-size: 10
