--- a/cornerstone-core/build.gradle
+++ b/cornerstone-core/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	api "io.opentracing.contrib:opentracing-jdbc:${property('opentracing-jdbc.version')}"
 	api "org.springdoc:springdoc-openapi-starter-webmvc-ui:${property('springdoc.version')}"
 	api "org.apache.commons:commons-pool2"
+	implementation "io.micrometer:micrometer-registry-prometheus"
+	implementation "io.prometheus:simpleclient_pushgateway"
 	compileOnly "org.springframework.boot:spring-boot-starter-amqp"
 	testFixturesApi "org.springframework.boot:spring-boot-starter-test"
 	testFixturesApi "org.springframework.security:spring-security-test"
