--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.43
 arch-unit-gradle-plugin.version=4.0.0
 dependency-management-plugin.version=1.1.6
+native-image.version=0.10.3
 spring-boot.version=3.4.0
 resilience4j.version=2.1.0
 springdoc.version=2.7.0
