--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ springdoc.version=2.1.0
 testcontainers.version=1.18.0
 commons-net.version=3.8.0
 aws-sdk-java.version=1.12.170
+datasource-micrometer.version=1.0.2
 # gradle publish -PrepoUrlPrefix=http://localhost:8081/repository -PrepoUser=xxx -PrepoPassword=xxx
 repoUser=admin
 repoPassword=password
