--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=2.0.0
+version=2.0.1-SNAPSHOT
 lombok-plugin.version=8.0.1
 javaformat-plugin.version=0.0.38
 dependency-management-plugin.version=1.1.0
