Log JpaTransactionManager for tests

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -126,6 +126,7 @@ logging:
   level:
     sql: TRACE
     org.hibernate.orm.jdbc.bind: TRACE
+    org.springframework.orm.jpa.JpaTransactionManager: DEBUG
     web: DEBUG
     org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: TRACE
     io.cornerstone.core.web.DefaultRequestMappingHandlerMapping: TRACE
