--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -56,6 +56,8 @@ spring.data.redis:
 
 spring.cache.redis.time-to-live: 300s
 
+spring.threads.virtual.enabled: true
+
 spring.task:
   execution:
     pool.maxSize: 100
@@ -81,7 +83,9 @@ security.permit-all-path-patterns:
 
 logging:
   config: classpath:log4j2.xml
-  level.org.springframework.context.support.ResourceBundleMessageSource: ERROR
+  level.org.springframework.context.support:
+      ResourceBundleMessageSource: ERROR
+      "[PostProcessorRegistrationDelegate$BeanPostProcessorChecker]": ERROR
 
 management.endpoints.web.exposure.include: [health, prometheus]
 management.influx.metrics.export:
