--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.40
 dependency-management-plugin.version=1.1.0
 spring-boot.version=3.2.0
+hibernate.version=6.4.0.Final
 resilience4j.version=2.1.0
 springdoc.version=2.2.0
 commons-net.version=3.10.0
