Disable service links to avoid environment clashing
Before this commit, Environment.getProperty("redis.port") will be
unexpected tcp://10.0.151.188:6379 caused by env REDIS_PORT which is
created by k8s

--- a/showcase/k8s/deployment.yaml
+++ b/showcase/k8s/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: ${application.name}
     spec:
+      enableServiceLinks: false
       containers:
       - name: ${application.name}
         image: ${application.name}:${application.version}
