--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=3.0.0
+version=3.0.1-SNAPSHOT
 lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.40
 dependency-management-plugin.version=1.1.0
