Introduce openrewrite plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ version=3.0.1-SNAPSHOT
 lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.41
 dependency-management-plugin.version=1.1.0
+openrewrite-plugin.version=6.10.1
+rewrite-migrate-java.version=2.10.0
 spring-boot.version=3.2.4
 resilience4j.version=2.1.0
 springdoc.version=2.2.0
