--- a/showcase/k8s/config.properties
+++ b/showcase/k8s/config.properties
@@ -1,2 +1,2 @@
-#mysql.service.host=mysql.default.svc.cluster.local
-#redis.service.host=redis.default.svc.cluster.local
+#mysql.host=mysql.default.svc.cluster.local
+#redis.host=redis.default.svc.cluster.local
