--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.42
 dependency-management-plugin.version=1.1.6
 spring-boot.version=3.3.2
+hibernate.version=6.6.0.Final
 resilience4j.version=2.1.0
 springdoc.version=2.5.0
 commons-net.version=3.10.0
