--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ group=io.cornerstone
 version=3.0.1-SNAPSHOT
 lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.43
+arch-unit-gradle-plugin.version=4.0.0
 dependency-management-plugin.version=1.1.6
 spring-boot.version=3.3.5
 hibernate.version=6.6.2.Final
