--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=io.cornerstone
-version=3.0.1
+version=4.0.0-SNAPSHOT
 lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.43
 arch-unit-gradle-plugin.version=4.0.0
