Refactor multiple redis support
Spring Boot supports @Bean(defaultCandidate=false) since 3.4

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -6,9 +6,6 @@ server:
     include-binding-errors: always
     include-stacktrace: never
 
-spring.autoconfigure.exclude:
-  - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
-
 spring.datasource:
   name: ${spring.application.name}
   url: jdbc:mysql://${mysql.host:localhost}:${mysql.port:3306}/${spring.application.name}?createDatabaseIfNotExist=true&serverTimezone=Asia/Shanghai&autoReconnectForPools=true&useUnicode=true&useServerPrepStmts=true&cachePrepStmts=true&tinyInt1isBit=false&socketTimeout=60000&sslMode=DISABLED&allowPublicKeyRetrieval=true
@@ -145,7 +142,8 @@ logging:
 ---
 spring:
   config.activate.on-profile: test
-  data.redis.enabled: false
+  autoconfigure.exclude:
+  - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
 
 spring.security.user.password: "{bcrypt}$2a$10$g1WqDyVfiD4vEOQZr.yRZOnWlzuAs2gMiS/jILkmYfb22XTzx9Dlm"
 
