--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ version=4.0.0-SNAPSHOT
 lombok-plugin.version=8.4
 javaformat-plugin.version=0.0.43
 arch-unit-gradle-plugin.version=4.0.0
+arch-unit-build-plugin-core.version=4.0.1
 dependency-management-plugin.version=1.1.6
 spring-boot.version=3.4.0
 resilience4j.version=2.1.0
