Enable observation annotations by default

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -99,6 +99,7 @@ logging:
       exclude: ["request", "server"]
 
 management.endpoints.web.exposure.include: [health, prometheus]
+management.observations.annotations.enabled: true
 management.influx.metrics.export:
   enabled: false
   db: metrics
