Add default configuration values for OTLP tracing

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -107,6 +107,7 @@ management.influx.metrics.export:
 
 management.tracing.enabled: false
 jdbc.datasource-proxy.enabled: ${management.tracing.enabled}
+management.otlp.tracing.endpoint: http://localhost:4318/v1/traces
 
 springdoc.swagger-ui.enabled: false
 springdoc.api-docs.enabled: ${springdoc.swagger-ui.enabled}
