--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
 group=io.cornerstone
 version=4.0.0-SNAPSHOT
-lombok-plugin.version=8.4
+lombok-plugin.version=9.2.0
 javaformat-plugin.version=0.0.47
 arch-unit-gradle-plugin.version=4.0.0
 arch-unit-build-plugin-core.version=4.0.1
 dependency-management-plugin.version=1.1.6
-spring-boot.version=3.5.9
+spring-boot.version=4.0.2
+spring-retry.version=2.0.9
 resilience4j.version=2.3.0
-springdoc.version=2.8.13
+springdoc.version=3.0.0
 commons-net.version=3.10.0
 aws-sdk-java.version=1.12.573
 datasource-micrometer.version=1.0.5
