Use Spring Boot's default log4j2 configuration for tests

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -146,6 +146,9 @@ spring.main.allow-bean-definition-overriding: true
 
 spring.http.client.redirects: DONT_FOLLOW
 
+logging:
+  config:
+
 ---
 spring:
   config.activate.on-profile: prod
