Set `org.gradle.jvmargs=-Duser.language=en`

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ datasource-micrometer.version=1.0.5
 # gradle publish -PrepoUrlPrefix=http://localhost:8081/repository -PrepoUser=xxx -PrepoPassword=xxx
 repoUser=admin
 repoPassword=password
+org.gradle.jvmargs=-Duser.language=en
